# libui-python

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: changelog.md  concepts.md  conf.py  index.md  installation.md  make.bat  quickstart.md
docs/api/: index.md
docs/tutorial/: 01-hello-world.md  02-state-and-binding.md  03-layouts.md  04-controls.md  05-tables.md  06-menus-dialogs.md  07-drawing.md  08-async.md  09-building-an-app.md  index.md
docs/widgets/: index.md
examples/: contacts.py  draw.py  example.py  example_async.py  hello.py  showcase.py  showcase_declarative.py  table.py  window.py  window_async.py
libui/: __init__.py  loop.py  node.py  state.py
libui/declarative/: __init__.py  app.py  node.py  nodes.py  state.py
libui/widgets/: __init__.py  _helpers.py  button.py  checkbox.py  combobox.py  containers.py  draw.py  entry.py  label.py  pickers.py  progressbar.py  radiobuttons.py  separator.py  slider.py  spinbox.py  table.py
patches/: 0001-darwin-grid-fix-hexpand-on-macOS.patch  0002-darwin-group-fix-NSBox-border-style-for-dark-mode.patch  0003-darwin-form-fix-label-vertical-alignment.patch
scripts/: apply_patches.py  gen_stubs.py  screenshots.py
src/libui/: attribute.c  attributed_string.c  control.c  draw.c  image.c  module.c  module.h  table_model.c  widget_area.c  widget_box.c  widget_button.c  widget_checkbox.c  widget_colorbutton.c  widget_combobox.c  widget_datetimepicker.c  widget_editablecombobox.c  widget_entry.c  widget_fontbutton.c  widget_form.c  widget_grid.c  widget_group.c  widget_label.c  widget_menu.c  widget_multilineentry.c  widget_progressbar.c  widget_radiobuttons.c  widget_separator.c  widget_slider.c  widget_spinbox.c  widget_tab.c  widget_table.c  widget_window.c
src/py_module/: attribute.c  attributed_string.c  control.c  (+30 more)
tests/: conftest.py  test_complex.py  test_declarative.py  test_fuzz.py  test_loop.py  test_new_widgets.py  test_widgets.py
(+23 files in other folders)
