[build-system]
requires = ["setuptools>=75", "meson>=1.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "libui"
version = "0.1.0"
description = "Python bindings for libui-ng"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/mosquito/libui-python"
Repository = "https://github.com/mosquito/libui-python"
Issues = "https://github.com/mosquito/libui-python/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
docs = ["sphinx>=7", "furo", "myst-parser", "sphinx-copybutton", "sphinx-design"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff"]
docs = ["sphinx>=7", "furo", "myst-parser", "sphinx-copybutton", "sphinx-design"]

[tool.setuptools.packages.find]
where = ["."]
include = ["libui*"]
